fix(markdown): fix img z-index

--- a/components/markdown/markdown.module.scss
+++ b/components/markdown/markdown.module.scss
@@ -43,6 +43,7 @@
   }
   img {
     position: relative;
+    z-index: 1;
   }
 
   .header-anchor,
